<resources>
    <string name="app_name">My News</string>


    <!--Menu-->
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    <!--Tabs-->
    <string-array name="TitleTabs">
        <item>Top Stories</item>
        <item>Most Popular</item>
        <item>Sport</item>
    </string-array>

    <!--Display Article-->
    <string name="URL">URL</string>

    <!--search-->
    <string name="searchButton">Search</string>
    <string name="searchNoResult">No result</string>

    <!--filters parameters-->
    <string name="category1">Arts</string>
    <string name="category2">Business</string>
    <string name="category3">Entrepreneurs</string>
    <string name="category4">Politics</string>
    <string name="category5">Sports</string>
    <string name="category6">Travel</string>
    <string name="beginDate">Begin Date</string>
    <string name="endDate">End Date</string>
    <string name="keyword_search">search query term</string>
    <string name="arrow">arrow</string>

    <!--Alert Dialog-->
    <string name="ErrorTitle">Error</string>
    <string name="missFilterMessage">You should enter at least one query term and check one category</string>
    <string name="wrongDateFormatMessage">Wrong dates format</string>
    <string name="comparedDates">End date is anterior to begin date</string>

    <!--Notifications-->
    <string name="notifOnOff">Enable notification (once/day)</string>
    <string name="NotifTitle">My News</string>
    <string name="NotifMessageBegin">You have </string>
    <string name="NotifMessageEnd"> new interesting articles</string>

    <!--About-->
    <string name="AboutTitle">What to do with this application ?</string>
    <string name="AboutText">Based on the New York Times APIs, you can :\n
* Be informed of the last Top Stories\n
* Be informed of the Most Popular Articles\n
* Be informed of the Top Stories about Sport\n
* Do research with publication dates, key words or categories\n
* Be notified if articles corresponding to your research has been published</string>

    <!--Help-->
    <string name="HelpTitle">What you should know about this application ?</string>
    <string name="HelpTextSearch">To do research :\n
    * Enter at least one query term\n
    * (Optional) Enter a begin date manually or by picking the back arrow\n
    * (Optional) Enter a end date manually or by picking the back arrow\n
    * Check at least one category</string>
    <string name="HelpTextNotification">To enable notification :\n
    * Enter at least one query term\n
    * Check at least one category\n
    * Pick the switch button\n
    You will be notified at 6PM each day if there is new articles for you\n
    \n
    Disable notification before changing parameters</string>

</resources>
