<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Controller.Activities.MainActivity">
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_activity_main_notif"
        android:title="@string/notification"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_activity_main_help"
        android:title="@string/help"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_activity_main_about"
        android:title="@string/about"
        app:showAsAction="never">
    </item>
</menu>