<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Controller.Fragments.SearchFilterFragments.CategoriesFragment">


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBox_category_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/text_size"
        android:text="@string/category1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:checked="true" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBox_category_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/text_size"
        android:text="@string/category2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_category_arts" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBox_category_entrepreneurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/text_size"
        android:text="@string/category3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_category_business" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBox_category_politics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/text_size"
        android:text="@string/category4"
        app:layout_constraintStart_toStartOf="@id/guideline_middle"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBox_category_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/text_size"
        android:text="@string/category5"
        app:layout_constraintStart_toStartOf="@+id/guideline_middle"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_category_politics" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBox_category_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/text_size"
        android:text="@string/category6"
        app:layout_constraintStart_toStartOf="@+id/guideline_middle"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_category_sports" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>